--- a/config/config.main.json
+++ b/config/config.main.json
@@ -16,13 +16,13 @@
     "LANGUAGE": "en_US",
     "LOG_LEVEL": 1,
     "MODERATORS": [
-        "PUT YOUR UID HERE"
+        "61554803750900"
     ],
     "ABSOLUTES": [
-        "PUT YOUR UID HERE"
+        "61554803750900"
     ],
-    "NAME": "𝙼𝚘𝚌𝚑𝚊 𝙰𝚒",
-    "PREFIX": "-",
+    "NAME": "🌩️KingXavia👑",
+    "PREFIX": "/",
     "timezone": "Asia/Manila",
     "REFRESH": "43200000"
 }
